--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -95,10 +95,6 @@ jobs:
         # Log these results in Merkely
         env:
           TEST_RESULTS_FILE: build/security/security.xml
-          X_MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
-          X_MERKELY_EVIDENCE_TYPE: security
-          X_MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          X_MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           make security
           docker run \
@@ -120,23 +116,25 @@ jobs:
         # Run coverage, write summary to build/coverage/coverage_summary.sh
         # Put coverage summary in Merkely
         env:
-          MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
-          MERKELY_EVIDENCE_TYPE: coverage
-          MERKELY_IS_COMPLIANT: 'TRUE'
-          MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          X_MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
+          X_MERKELY_EVIDENCE_TYPE: coverage
+          X_MERKELY_IS_COMPLIANT: 'TRUE'
+          X_MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+          X_MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           make coverage
           source build/coverage/coverage_summary.sh
-          export MERKELY_DESCRIPTION="${COVERAGE_SUMMARY}"
+          # export MERKELY_DESCRIPTION="${COVERAGE_SUMMARY}"
           docker run \
               --env MERKELY_COMMAND=log_evidence \
-              --env MERKELY_FINGERPRINT=${MERKELY_FINGERPRINT} \
-              --env MERKELY_EVIDENCE_TYPE=${MERKELY_EVIDENCE_TYPE} \
-              --env MERKELY_IS_COMPLIANT=${MERKELY_IS_COMPLIANT} \
-              --env MERKELY_DESCRIPTION="${MERKELY_DESCRIPTION}" \
-              --env MERKELY_CI_BUILD_URL=${MERKELY_CI_BUILD_URL} \
-              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN} \
+              --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
+              --env MERKELY_EVIDENCE_TYPE=coverage \
+              --env MERKELY_IS_COMPLIANT=TRUE \
+              --env MERKELY_DESCRIPTION="${COVERAGE_SUMMARY}" \
+              --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
+              --env GITHUB_SERVER_URL \
+              --env GITHUB_REPOSITORY \
+              --env GITHUB_RUN_ID \
               --rm \
               --volume=/var/run/docker.sock:/var/run/docker.sock \
               --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
@@ -145,21 +143,23 @@ jobs:
 
       - name: Deploy to STAGE and log deployment in Merkely
         env:
-          MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
-          MERKELY_ENVIRONMENT: staging
-          MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
-          MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          X_MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
+          X_MERKELY_ENVIRONMENT: staging
+          X_MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
+          X_MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+          X_MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           echo YOUR DEPLOYMENT COMMAND HERE
+
           docker run \
               --env MERKELY_COMMAND=log_deployment \
-              --env MERKELY_FINGERPRINT=${MERKELY_FINGERPRINT} \
-              --env MERKELY_CI_BUILD_URL=${MERKELY_CI_BUILD_URL} \
-              --env MERKELY_DESCRIPTION="${MERKELY_DESCRIPTION}" \
-              --env MERKELY_ENVIRONMENT=${MERKELY_ENVIRONMENT} \
-              --env MERKELY_USER_DATA=${MERKELY_USER_DATA} \
-              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN} \
+              --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
+              --env MERKELY_DESCRIPTION="Deployed to staging in pipeline" \
+              --env MERKELY_ENVIRONMENT=staging \
+              --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
+              --env GITHUB_SERVER_URL \
+              --env GITHUB_REPOSITORY \
+              --env GITHUB_RUN_ID \
               --rm \
               --volume=/var/run/docker.sock:/var/run/docker.sock \
               --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
