--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Declare Merkely Pipeline
         env:
-          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          X_MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           docker run --rm \
               --env MERKELY_COMMAND=declare_pipeline \
-              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN} \
+              --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
               --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
               merkely/change
 
@@ -37,7 +37,7 @@ jobs:
           X_DOCKERHUB_DEPLOY_USERNAME: ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }}
         run: |
           make build
-	      echo ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }} --password-stdin
+          echo ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }} --password-stdin
           make docker_push
 
 
