Add missing dir to docker build command in .github/workflows/master_pipeline.yml

--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -33,14 +33,14 @@ jobs:
       - name: Build and Publish Docker Image
         run: |
           #make build
-          docker build --file ${PWD}/Dockerfile --tag ${{ env.TAGGED_IMAGE }}
-          docker tag ${{ env.TAGGED_IMAGE }} ${{ env.LATEST_IMAGE}}
+          docker build --file ${PWD}/Dockerfile --tag ${{ env.TAGGED_IMAGE }} ${PWD}
+          docker tag ${{ env.TAGGED_IMAGE }} ${{ env.LATEST_IMAGE }}
 
           echo ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }} --password-stdin
 
           #make docker_push
           docker push ${{ env.TAGGED_IMAGE }}
-          docker push ${{ env.LATEST_IMAGE}}
+          docker push ${{ env.LATEST_IMAGE }}
 
 
       - name: Log Docker Image in Merkely
