Delete dead code in .github/workflows/master_pipeline.yml

--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -14,11 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Make Docker image name available for following steps
+      - name: Make Docker image names available for following steps
         run: |
           echo "LATEST_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:latest" >> ${GITHUB_ENV}
           echo "TAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
-          echo "UNTAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator" >> ${GITHUB_ENV}
 
 
       - name: Declare Merkely Pipeline
