Inline makefile targets into .github/workflows/deploy_to_production.yml

--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -26,22 +26,46 @@ jobs:
     - name: Make Docker image name available for following steps
       run: |
         echo "TAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
-        echo "UNTAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator" >> ${GITHUB_ENV}
-
+        # echo "UNTAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator" >> ${GITHUB_ENV}
 
     - env:
-        MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
-        MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
-        MERKELY_ENVIRONMENT: production
-        MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-        MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+        X_MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
+        X_MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
+        X_MERKELY_ENVIRONMENT: production
+        X_MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+        X_MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
       run: |
-        make docker_pull
-        make merkely_control_deployment
+        #make docker_pull
+        docker pull ${{ env.TAGGED_IMAGE }}
+
+        #make merkely_control_deployment
+        docker run \
+            --env MERKELY_COMMAND=control_deployment \
+            --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
+            --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
+            --rm \
+            --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
+            --volume /var/run/docker.sock:/var/run/docker.sock \
+            merkely/change
+
         echo YOUR DEPLOYMENT COMMAND HERE
 
-        export MERKELY_DESCRIPTION="Deployed to production in CI by ${GITHUB_ACTOR}"
-        make merkely_log_deployment
+        #export MERKELY_DESCRIPTION="Deployed to production in CI by ${GITHUB_ACTOR}"
+        #make merkely_log_deployment
+        docker run \
+            --env MERKELY_COMMAND=log_deployment \
+            --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
+            --env MERKELY_DESCRIPTION="Deployed to production in pipeline" \
+            --env MERKELY_ENVIRONMENT=production \
+            --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
+            --env GITHUB_SERVER_URL \
+            --env GITHUB_REPOSITORY \
+            --env GITHUB_RUN_ID \
+            --rm \
+            --volume=/var/run/docker.sock:/var/run/docker.sock \
+            --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
+            merkely/change
+
         git checkout --track origin/production
         git merge ${{ github.event.inputs.deploy_commit }}
         git push origin production
