--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,2 +1,13 @@
+image: ubuntu-latest
 
-# comment
+pipelines:
+  default:
+    - step:
+        name: Declare Merkely Pipeline
+        script:
+          - docker run --rm \
+              --env MERKELY_COMMAND=declare_pipeline \
+              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN} \
+              --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
+              merkely/change
+
