--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,6 +11,8 @@ pipelines:
           - echo "LATEST_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-latest" > ENV_VARS.txt
           - echo "TAGGED_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)" >> ENV_VARS.txt
           - ls -al
+        artifacts:
+          - ENV_VARS.txt
 
     - step:
         name: Declare Merkely Pipeline
@@ -26,7 +28,6 @@ pipelines:
         name: Build and Publish Docker Image
         script:
           - ls -al
-          - fsdfsdf
           - export $(cat ENV_VARS.txt | xargs)
           - docker build --file ${PWD}/Dockerfile --tag ${TAGGED_IMAGE} ${PWD}
           - docker tag ${TAGGED_IMAGE} ${LATEST_IMAGE}
